# gamma2

./: .gitignore  .travis.yml  CHANGES.md  README.md  gamma.cabal
src/Math/: Factorial.hs  Gamma.hs
src/Math/Gamma/: Incomplete.hs  Lanczos.hs  Stirling.hs
test-suite/: Test.hs
test-suite/Math/: GammaTests.hs  IncGammaTests.hs  Reference.hs
