name:                   gamma
version:                0.10.0.0
stability:              provisional

cabal-version:          >= 1.9
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
                        Alexandre Rodrigues Baldé <alexandrer_b@outlook.com>
license:                PublicDomain
homepage:               https://github.com/rockbmb/gamma2

category:               Math, Numerical
synopsis:               Gamma function and related functions.
description:            Approximations of the gamma function, incomplete gamma 
                        functions, generalized gamma functions, and factorials.

tested-with:            GHC==8.0.2, GHC==8.2.2, GHC==8.4.3, GHC==8.6.1

extra-source-files:     extras/*.hs

source-repository head
  type: git
  location: git://github.com/rockbmb/gamma2.git

Library
  hs-source-dirs:       src
  ghc-options:          -Wall
  exposed-modules:      Math.Factorial
                        Math.Gamma
                        Math.Gamma.Incomplete
                        Math.Gamma.Stirling
                        Math.Gamma.Lanczos
  build-depends:        base >= 4.9 && <5,
                        continued-fractions >= 0.9.1,
                        converge,
                        template-haskell,
                        vector >= 0.5
